--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
+cmake==3.26.3
+face_recognition==1.3.0
 easydict==1.9
-numpy==1.17.0
+numpy==1.17.3
 tqdm==4.31.1
-torchvision==0.4.0
-torch==1.2.0
+torchvision==0.14.1
+torch==1.13.1
 opencv_python==4.2.0.34
 Pillow==7.1.2
 tensorboardX==2.0
